# dlauncher

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README  config.mk  defaults.h  dirlist.cpp  dirlist.hpp  dlauncher  dlauncher.c  dot_dlauncher_example  draw.c  dummy_plugin.c  dummy_plugin.cpp  exec.c  exec.cpp  exec.h  exec_pl.c  exec_pl.h  hist.h  item.h  plugin-interface  plugin.c  plugin.h  plugin_cmd.cpp  plugin_dir.cpp  plugin_shell.cpp  plugin_ssh.cpp  plugin_zsh.cpp  sock_pl.c  sock_pl.h  socket_pl.c  socket_pl.cpp  socket_pl.h
plugins/: calc.zsh  dirlist.cpp  dirlist.hpp  exec.cpp  exec.hpp  plugin_cmd.cpp  plugin_dir.cpp  plugin_shell.cpp  plugin_ssh.cpp  plugin_zsh.cpp
zsh_completion/: completion-server-init.zsh  completion-server.zsh
