CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT (dlauncher)

SET(DL_VERSION 0.1)
SET(CMAKE_COLOR_MAKEFILE ON)
# SET(CMAKE_VERBOSE_MAKEFILE ON)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(XLIB REQUIRED x11)
PKG_CHECK_MODULES(XINERAMA REQUIRED xinerama)
PKG_CHECK_MODULES(XFT REQUIRED xft)

INCLUDE_DIRECTORIES(${XLIB_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${XINERAMA_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${XFT_INCLUDE_DIRS})

LINK_DIRECTORIES(${XLIB_LIBRARY_DIRS})
LINK_DIRECTORIES(${XINERAMA_LIBRARY_DIRS})
LINK_DIRECTORIES(${XFT_LIBRARY_DIRS})

ADD_EXECUTABLE(dlauncher.bin dlauncher.c draw.c dirlist.cpp exec.cpp socket_pl.cpp
  plugin_cmd.cpp plugin_ssh.cpp plugin_dir.cpp plugin_shell.cpp)

SET_PROPERTY(TARGET dlauncher.bin APPEND PROPERTY COMPILE_DEFINITIONS VERSION="${DL_VERSION}" XINERAMA)
TARGET_LINK_LIBRARIES(dlauncher.bin ${XLIB_LIBRARIES} ${XINERAMA_LIBRARIES} ${XFT_LIBRARIES})

ADD_CUSTOM_COMMAND(TARGET dlauncher.bin POST_BUILD
                   COMMAND ${CMAKE_COMMAND} -E copy
                   ${CMAKE_SOURCE_DIR}/dlauncher $<TARGET_FILE_DIR:dlauncher.bin>)
